--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="desktop" media="min-width:1200px"/>
 </head>
 <body>
-    
+    <div class="card">
+        <section class="info">
+            <p>perfume</p>
+            <h1>Gabrielle Essence Eau de Parfum</h1>
+            <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+            <section class="precios">
+                <div><p>$149.99</p></div>
+                <div class="descuento"><p>$169.99</p></div>
+            </section>
+
+            <button>Add to Card</button>
+
+        </section>
+
+    </div>
 </body>
 </html>
