--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review Card</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="desktop" media="min-width:1200px"/>
 </head>
 <body>
     <div class="card">
+        <div class="image">
+            <div class="imagen"></div>
+        </div>
         <section class="info">
-            <p>perfume</p>
+            <p class="perfume">perfume</p>
             <h1>Gabrielle Essence Eau de Parfum</h1>
             <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
             <section class="precios">
@@ -18,7 +21,7 @@
                 <div class="descuento"><p>$169.99</p></div>
             </section>
 
-            <button>Add to Card</button>
+            <div class="boton"><span class="cart"></span>Add to Cart</div>
 
         </section>
 
