--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
             <section class="precios">
                 <div><p>$149.99</p></div>
-                <div class="descuento"><p>$169.99</p></div>
+                <div>
+                    <p id="descuento">$169.99</p>
+                </div>
             </section>
 
-            <div class="boton"><span class="cart"></span>Add to Cart</div>
+            <div class="boton"><span class="cart"> </span>Add to Cart</div>
 
         </section>
 
