change id for the perfume text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="imagen"></div>
         </div>
         <section class="info">
-            <p class="perfume">perfume</p>
+            <p id="perfume">perfume</p>
             <h1>Gabrielle Essence Eau de Parfum</h1>
             <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
             <section class="precios">
