--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review Card</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="desktop" media="min-width:1200px"/>
+    <link rel="stylesheet" href="desktop.css" media="(min-width:1200px)"/>
 </head>
 <body>
     <div class="card">
@@ -14,7 +14,7 @@
         </div>
         <section class="info">
             <p id="perfume">perfume</p>
-            <h1>Gabrielle Essence Eau de Parfum</h1>
+            <h1>Gabrielle Essence Eau De Parfum</h1>
             <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
             <section class="precios">
                 <div><p>$149.99</p></div>
@@ -26,7 +26,6 @@
             <div class="boton"><span class="cart"> </span>Add to Cart</div>
 
         </section>
-
     </div>
 </body>
 </html>
